<resources>
    <string name="app_name">Calc_Proyect</string>

    <!-- Valores de los botones -->
    <string name="Btn0">0</string>
    <string name="Btn1">1</string>
    <string name="Btn2">2</string>
    <string name="Btn3">3</string>
    <string name="Btn4">4</string>
    <string name="Btn5">5</string>
    <string name="Btn6">6</string>
    <string name="Btn7">7</string>
    <string name="Btn8">8</string>
    <string name="Btn9">9</string>

    <!--Valores de simbolos -->
    <string name="BtnPunto">.</string>
    <string name="BtnIgual">=</string>
    <string name="BtnSumar">+</string>
    <string name="BtnRestar">-</string>
    <string name="BtnDividir">/</string>
    <string name="BtnEliminar">--</string>
    <string name="BtnMultiplicar">x</string>
    <string name="BtnEliminarTodo">AC</string>
    <string name="BtnCambiarSimbolo">+/-</string>

    <string name="aux"></string>

</resources>